--- a/index.html
+++ b/index.html
@@ -61,40 +61,40 @@
 		<div class="container">
 			<h2 class="section-title">Категории</h2>
 			<div class="row">
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 						<svg height="24" class="card-icon">
                             <use href="img/icons.svg#brush"></use>
                         </svg>
                         <span class="card-text">Дизайн</span></a>
 				</div>
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#browser"></use>
                          </svg>
                          <span class="card-text">Разработка</span></a>
 				</div>
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#edit"></use>
                         </svg>
                         <span class="card-text">Копирайтинг</span></a>
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#fingerprint"></use>
                         </svg>
                         <span class="card-text">Безопасность</span></a>
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#camera"></use>
                         </svg>
                         <span class="card-text">Видео</span></a>
 				</div>
-				<div class="col">
+				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#school"></use>
