--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
 		    <div class="col-5">
 		    	<h1 class="hero-title">Найдите удалённую работу вашей мечты</h1>
 		    	<p class="hero-text">Создайте резюме или отправьте отклик на вакансию  в&nbsp;компании с мировым именем и работайте <br>  по свободному графику</p>
-		    	<div class="input-group d-flex">
-		    		<input type="text" class="input" placeholder="Начните поиск">
-		    		<button class="button button-primary">
+		    	<form action="#" class="hero-form">
+		    	    <div class="input-group d-flex">
+		    		    <input type="text" class="input" placeholder="Начните поиск">
+		    		    <button class="button button-primary">
 		    			<img class="button-icon" src="img/search.svg" alt="icon: search">
 		    			<span class="button-text">Искать вакансии</span>
-		    		</button>
-		    	</div>
+		    		    </button>
+		    	    </div>
+		    	</form>
 		    	<div class="tags-group">
 		    		<span class="tags-label">Например:</span>
 		    		<a href="#" class="tag">Back-end</a>
@@ -81,12 +83,14 @@
                             <use href="img/icons.svg#edit"></use>
                         </svg>
                         <span class="card-text">Копирайтинг</span></a>
+                </div>
 				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
                             <use href="img/icons.svg#fingerprint"></use>
                         </svg>
                         <span class="card-text">Безопасность</span></a>
+                </div>
 				<div class="col-2">
 					<a href="#" class="card d-flex flex-column align-items-center">
 					    <svg height="24" class="card-icon">
@@ -104,5 +108,118 @@
 			</div>
 		</div>
 	</section>
+	<section class="section offers">
+		<div class="container">
+			<h2 class="section-title">Свежие вакансии</h2>
+			<div class="offer d-flex align-items-center">
+				<div class="offer-image"></div>
+				<div class="offer-title">
+					<h3 class="offer-heading">Front-end разработчик</h3>
+					<span class="offer-place">Технопарк, Казань</span>
+				</div>
+				<span class="offer-salary">65 000 &#8381</span>
+				<div class="tags-group">
+		    		<span class="tags-label">Требования:</span>
+		    		<a href="#" class="tag">React</a>
+		    		<a href="#" class="tag">Git</a>
+		    		<a href="#" class="tag">SASS</a>
+		    	</div>
+		    	<a href="#" class="more">Подробнее</a>
+			</div>
+			<div class="offer d-flex align-items-center">
+				<div class="offer-image"></div>
+				<div class="offer-title">
+					<h3 class="offer-heading">Front-end разработчик</h3>
+					<span class="offer-place">Технопарк, Казань</span>
+				</div>
+				<span class="offer-salary">65 000 &#8381</span>
+				<div class="tags-group">
+		    		<span class="tags-label">Требования:</span>
+		    		<a href="#" class="tag">React</a>
+		    		<a href="#" class="tag">Git</a>
+		    		<a href="#" class="tag">SASS</a>
+		    	</div>
+		    	<a href="#" class="more">Подробнее</a>
+			</div>
+			<div class="offer d-flex align-items-center">
+				<div class="offer-image"></div>
+				<div class="offer-title">
+					<h3 class="offer-heading">Front-end разработчик</h3>
+					<span class="offer-place">Технопарк, Казань</span>
+				</div>
+				<span class="offer-salary">65 000 &#8381</span>
+				<div class="tags-group">
+		    		<span class="tags-label">Требования:</span>
+		    		<a href="#" class="tag">React</a>
+		    		<a href="#" class="tag">Git</a>
+		    		<a href="#" class="tag">SASS</a>
+		    	</div>
+		    	<a href="#" class="more">Подробнее</a>
+			</div>
+			<div class="offer d-flex align-items-center">
+				<div class="offer-image"></div>
+				<div class="offer-title">
+					<h3 class="offer-heading">Front-end разработчик</h3>
+					<span class="offer-place">Технопарк, Казань</span>
+				</div>
+				<span class="offer-salary">65 000 &#8381</span>
+				<div class="tags-group">
+		    		<span class="tags-label">Требования:</span>
+		    		<a href="#" class="tag">React</a>
+		    		<a href="#" class="tag">Git</a>
+		    		<a href="#" class="tag">SASS</a>
+		    	</div>
+		    	<a href="#" class="more">Подробнее</a>
+			</div>
+		</div>
+	</section>
+	<section class="section subscribe">
+		<div class="container">
+			<form class="subscribe-form">
+				<h2 class="subscribe-title">Подпишитесь на рассылку с новыми вакансиями</h2>
+				<p class="subscribe-subtitle">Мы отправляем по одному письму в&nbsp;неделю с&nbsp;подходящими вам вакансиями</p>
+                <div class="input-group d-flex">
+		    		 <input type="text" class="input" placeholder="E-mail">
+		    		 <button class="button button-primary">
+		    	     <img class="button-icon" src="img/Vector.svg" alt="icon: Vector">
+		    	     <span class="button-text">Подписаться</span>
+		             </button>
+		    	</div>
+			</form>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-3">
+                   <img src="img/logo.svg" alt="log: Find Your Job" class="footer-logo">
+                   <p class="footer-description">Сайт с вакансиями для тех,<br> кто ищет удалённую работу</p>
+                   <span class="footer-copyright">&#169 2021</span>
+			</div>
+		        <div class="col-3">
+		        	<h3 class="footer-title">Свяжитесь с нами</h3>
+		        	<ul class="footer-list">
+		        		<li class="footer-list-item"><a href="tel: +78002020300" class="footer-list-link">8 800 20 20 300</a></li>
+		        		<li class="footer-list-item"><a href="mailto: info@findyorjob.net" class="footer-list-link">info@findyorjob.net</a></li>
+		        	</ul>
+			</div>
+				<div class="col-3">
+					<h3 class="footer-title">Информация</h3>
+		        	<ul class="footer-list">
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Обработка данных</a></li>
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Конфиденцильность</a></li>
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Пуибличная оферта</a></li>
+		        	</ul>
+			</div>
+				<div class="col-3">
+					<h3 class="footer-title">Навигация по сайту</h3>
+		        	<ul class="footer-list">
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Вакансии</a></li>
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Компании</a></li>
+		        		<li class="footer-list-item"><a href="#" class="footer-list-link">Контакты</a></li>
+		        	</ul>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
